<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.carpool.Pesquisar" >

    <item android:id="@+id/action_search"
          android:icon="@drawable/ic_action_search"
          android:title="@string/action_search"
          android:showAsAction="ifRoom"/>
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    
    <item android:id="@+id/action_new" 
          android:icon="@drawable/ic_action_new" 
          android:title="@string/action_new" 
          android:showAsAction="ifRoom">(id == R.id.action_settings) {
			return true;
		}
    </item>
    
    
    <item android:id="@+id/action_events" 
          android:title="@string/action_event" 
          android:icon="@drawable/car"
          android:showAsAction="ifRoom">
    </item>

</menu>
