<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.carpool.login.ChangePassword" >

    <EditText
        android:id="@+id/campoAlterarSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/recSenha"
        android:layout_marginTop="43dp"
        android:ems="10"
        android:text="@string/login" />

    <Button
        android:id="@+id/btRec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/campoAlterarSenha"
        android:layout_below="@+id/campoAlterarSenha"
        android:layout_marginTop="30dp"
        android:text="@string/reset" />

    <Button
        android:id="@+id/btVoltarRecSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btRec"
        android:layout_alignBottom="@+id/btRec"
        android:layout_alignRight="@+id/campoAlterarSenha"
        android:text="@string/voltar" />

    <TextView
        android:id="@+id/recSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:text="@string/esquecisenha"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/recSenhaMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/btVoltarRecSenha"
        android:layout_below="@+id/btRec"
        android:layout_marginTop="33dp"
        android:text="@string/passwordRecMsg" />

</RelativeLayout>
