<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.carpool.login.Register" >

    <EditText
        android:id="@+id/cpCadastroNomeUs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/nomeUsuario"
        android:layout_alignBottom="@+id/nomeUsuario"
        android:layout_alignParentRight="true"
        android:hint="@string/nomeusuario"
        android:ems="10" />

    <EditText
        android:id="@+id/cpCadastroSobrUs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/sobrenome"
        android:layout_alignBottom="@+id/sobrenome"
        android:layout_alignLeft="@+id/cpCadastroNomeUs"
        android:hint="@string/sobrenome"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/cpCadastroEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/email"
        android:layout_alignBottom="@+id/email"
        android:layout_alignLeft="@+id/cpCadastroSobrUs"
        android:ems="10"
        android:hint="@string/login" />

    <TextView
        android:id="@+id/cidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bairro"
        android:layout_below="@+id/bairro"
        android:layout_marginTop="22dp"
        android:text="@string/cidade" />

    <EditText
        android:id="@+id/cpCadastroTel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/telefone"
        android:layout_alignLeft="@+id/cpCadastroSenha"
        android:hint="@string/telefone"
        android:ems="10" />

    <EditText
        android:id="@+id/cpCadastroSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cpCadastroTel"
        android:layout_alignLeft="@+id/cpCadastroEmail"
        android:hint="@string/senha"
        android:ems="10" />

    <EditText
        android:id="@+id/cpCadastroCidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/cidade"
        android:layout_alignLeft="@+id/cpCadastroBairro"
        android:hint="@string/cidade"
        android:ems="10" />

    <EditText
        android:id="@+id/cpCadastroEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bairro"
        android:layout_alignLeft="@+id/cpCadastroTel"
        android:hint="@string/endereco"
        android:ems="10" />

    <EditText
        android:id="@+id/cpCadastroBairro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/bairro"
        android:layout_alignLeft="@+id/cpCadastroEnd"
        android:hint="@string/bairro"
        android:ems="10" />

    <EditText
        android:id="@+id/cpCadastroEstado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/uf"
        android:layout_alignLeft="@+id/cpCadastroCidade"
        android:hint="@string/uf"
        android:ems="10" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/nomeUsuario"
        android:layout_below="@+id/cpCadastroSobrUs"
        android:layout_marginTop="21dp"
        android:text="@string/login" />

    <TextView
        android:id="@+id/telefone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/senha"
        android:layout_below="@+id/senha"
        android:layout_marginTop="26dp"
        android:text="@string/telefone" />

    <TextView
        android:id="@+id/cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/cadastro"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btCadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/enviar" />

    <TextView
        android:id="@+id/sobrenome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/email"
        android:layout_below="@+id/cpCadastroNomeUs"
        android:layout_marginTop="17dp"
        android:text="@string/sobrenome" />

    <TextView
        android:id="@+id/nomeUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/cadastro"
        android:layout_marginTop="16dp"
        android:text="@string/nomeusuario" />

    <TextView
        android:id="@+id/senha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/nomeUsuario"
        android:layout_below="@+id/cpCadastroEmail"
        android:layout_marginTop="15dp"
        android:text="@string/senha" />

    <TextView
        android:id="@+id/endereco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/telefone"
        android:layout_below="@+id/telefone"
        android:layout_marginTop="14dp"
        android:text="@string/endereco" />

    <TextView
        android:id="@+id/bairro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/senha"
        android:layout_below="@+id/endereco"
        android:layout_marginTop="16dp"
        android:text="@string/bairro" />

    <TextView
        android:id="@+id/uf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/endereco"
        android:layout_below="@+id/cidade"
        android:layout_marginTop="14dp"
        android:text="@string/uf" />
    <TextView
    android:id="@+id/cadastroMsg" 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text=""
    />

</RelativeLayout>
