<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.carpool.NovoEvento" >

    <EditText
        android:id="@+id/cpNomeUs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="55dp"
        android:hint="@string/nome"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/cpSenhaUs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cpNomeUs"
        android:layout_below="@+id/cpNomeUs"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/data"
        android:inputType="date" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cpSenhaUs"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/descricao"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/butaoCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText3"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="72dp"
        android:layout_marginLeft="56dp"
        android:text="@string/criar" />

</RelativeLayout>
